--- a/index.html
+++ b/index.html
@@ -1,78 +1,55 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8" />
-  <title>CricNex Live Player</title>
-  <script src="https://cdn.jsdelivr.net/npm/shaka-player@4.6.0/dist/shaka-player.compiled.js"></script>
-  <style>
-    body { background: #000; color: #fff; font-family: sans-serif; text-align: center; }
-    video { width: 95%; max-width: 720px; margin-top: 10px; border: 4px solid #00e676; border-radius: 10px; }
-    #qualityLevels {
-      background: #111; color: white; padding: 6px 10px; border-radius: 4px; margin-top: 10px;
-    }
-    .watermark {
-      position: absolute;
-      top: 10px;
-      right: 10px;
-      background: rgba(0,0,0,0.6);
-      padding: 5px 10px;
-      color: #00e676;
-      border-radius: 5px;
-      font-size: 14px;
-    }
-  </style>
-</head>
-<body>
-  <h2>CricNex Live | Powered by BDStreamHub</h2>
-  <div class="watermark">CricNex | BDStreamHub</div>
-  <video id="video" autoplay controls></video><br>
-  <select id="qualityLevels"></select>
-
-  <script>
-    const video = document.getElementById('video');
-    const qualitySelector = document.getElementById('qualityLevels');
-
-    async function initPlayer() {
-      const player = new shaka.Player(video);
-
-      player.configure({
-        drm: {
-          clearKeys: {
-            'd84c325f36814f39bbe59080272b10c3': '550727de4c96ef1ecff874905493580f'
-          }
-        }
-      });
-
-      try {
-        await player.load('https://ssc-1-enc.edgenextcdn.net/out/v1/c696e4819b55414388a1a487e8a45ca1/index.mpd');
-        console.log('Video loaded');
-
-        const tracks = player.getVariantTracks();
-        qualitySelector.innerHTML = '';
-        tracks.forEach((track, index) => {
-          const option = document.createElement('option');
-          option.value = index;
-          option.text = `${track.height}p (${Math.round(track.bandwidth / 1000)} kbps)`;
-          qualitySelector.appendChild(option);
-        });
-
-        qualitySelector.addEventListener('change', () => {
-          const selectedTrack = tracks[qualitySelector.value];
-          player.selectVariantTrack(selectedTrack, true);
-        });
-
-      } catch (e) {
-        console.error('Error loading video', e);
-        alert('Video Load Failed!');
+  <head>
+    <meta charset="utf-8" />
+    <title>CricNex DRM Player</title>
+    <script src="https://cdn.jsdelivr.net/npm/shaka-player@4.6.0/dist/shaka-player.compiled.js"></script>
+    <style>
+      video { width: 95%; max-width: 720px; margin-top: 10px; background: black; }
+      .watermark {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        background: rgba(0,0,0,0.6);
+        padding: 5px 10px;
+        color: #00e676;
+        border-radius: 5px;
+        font-size: 14px;
       }
-    }
+    </style>
+  </head>
+  <body>
+    <div class="watermark">CricNex | Powered by BDStreamHub</div>
+    <video id="video" autoplay controls></video>
 
-    shaka.polyfill.installAll();
-    if (shaka.Player.isBrowserSupported()) {
-      initPlayer();
-    } else {
-      alert('Browser not supported!');
-    }
-  </script>
-</body>
+    <script>
+      shaka.polyfill.installAll();
+      if (shaka.Player.isBrowserSupported()) {
+        initPlayer();
+      } else {
+        alert('Browser not supported!');
+      }
+
+      async function initPlayer() {
+        const video = document.getElementById('video');
+        const player = new shaka.Player(video);
+
+        player.configure({
+          drm: {
+            clearKeys: {
+              'd84c325f36814f39bbe59080272b10c3': '550727de4c96ef1ecff874905493580f'
+            }
+          }
+        });
+
+        try {
+          await player.load('https://ssc-1-enc.edgenextcdn.net/out/v1/c696e4819b55414388a1a487e8a45ca1/index.mpd');
+          console.log('Video loaded successfully');
+        } catch (error) {
+          console.error('Error code', error.code, 'object', error);
+          alert('Video load failed: ' + error.message);
+        }
+      }
+    </script>
+  </body>
 </html>
