--- a/index.html
+++ b/index.html
@@ -1,106 +1,96 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>BANGLADESH vs PAKISTAN 1st T20i</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.3.5/shaka-player.compiled.min.js"></script>
+  <meta charset="UTF-8">
+  <title>Live Stream - BDStreamHub</title>
+  <script src="https://cdn.jsdelivr.net/npm/shaka-player@4.3.5/dist/shaka-player.compiled.min.js"></script>
   <style>
     body {
       margin: 0;
-      background-color: #000;
-      font-family: Arial, sans-serif;
+      background: #000;
       color: #fff;
-    }
-
-    .match-header {
+      font-family: sans-serif;
       text-align: center;
-      font-size: 20px;
-      padding: 10px;
-      background-color: #111;
-      color: #ffcc00;
-      font-weight: bold;
     }
-
-    .video-container {
-      width: 100%;
-      max-width: 100%;
+    .player-container {
       aspect-ratio: 16/9;
-      position: relative;
-      margin: 0 auto;
-      background-color: black;
+      background: #111;
+      margin: 10px;
     }
-
     video {
       width: 100%;
       height: 100%;
-      background: #000;
     }
-
-    .watermark, .viewer-count {
-      position: absolute;
-      background-color: rgba(0, 0, 0, 0.5);
-      padding: 5px 10px;
-      font-size: 12px;
-      border-radius: 4px;
-      z-index: 2;
+    .match-list {
+      margin: 10px;
     }
-
-    .watermark {
-      bottom: 10px;
-      left: 10px;
+    .match-list button {
+      margin: 5px;
+      padding: 10px;
+      background: #222;
+      color: #fff;
+      border: 1px solid #444;
+      cursor: pointer;
     }
-
-    .viewer-count {
-      top: 10px;
-      right: 10px;
+    .countdown {
+      font-size: 18px;
+      margin: 10px;
     }
   </style>
 </head>
 <body>
-
-  <div class="match-header">BANGLADESH vs PAKISTAN 1st T20i</div>
-
-  <div class="video-container">
-    <video id="video" autoplay muted playsinline controls></video>
-    <div class="watermark">@BDStreamHub</div>
-    <div class="viewer-count">Viewers: <span id="viewers">0</span></div>
+  <h2>Live Match Streaming - BDStreamHub</h2>
+  <div class="countdown" id="countdown">⏳ Countdown Loading...</div>
+  <div class="match-list" id="matchButtons"></div>
+  <div class="player-container">
+    <video id="video" controls autoplay></video>
   </div>
 
   <script>
-    async function initPlayer() {
-      const video = document.getElementById('video');
-      const player = new shaka.Player(video);
+    const sheetAPI = 'https://script.google.com/macros/s/AKfycbxEhiRYIXhCaUegke__Gj9e64uZwaWNTDEEffAnkqc5Oh7A9RWdATMhgKSPOGxlM3FzdQ/exec';
 
-      // Optional configuration
-      player.configure({
-        streaming: {
-          bufferingGoal: 30,
-          rebufferingGoal: 15
-        }
+    const player = new shaka.Player(document.getElementById('video'));
+
+    async function loadMatches() {
+      const res = await fetch(sheetAPI);
+      const data = await res.json();
+
+      const matchButtons = document.getElementById("matchButtons");
+      matchButtons.innerHTML = "";
+
+      data.forEach(match => {
+        const btn = document.createElement("button");
+        btn.innerText = match.match_name;
+        btn.onclick = () => {
+          player.load(match.stream_url);
+          startCountdown(match.countdown_time);
+        };
+        matchButtons.appendChild(btn);
       });
-
-      try {
-        await player.load('https://live.tsports.com/mobile_hls/tsports_live_1/playlist.m3u8');
-        console.log('Video Loaded');
-      } catch (error) {
-        console.error('Error loading video:', error);
-        alert("Could not load video.");
-      }
     }
 
-    shaka.polyfill.installAll();
-    if (shaka.Player.isBrowserSupported()) {
-      initPlayer();
-    } else {
-      alert('Your browser does not support this video.');
+    function startCountdown(endTime) {
+      const countdown = document.getElementById("countdown");
+      const end = new Date(endTime).getTime();
+
+      clearInterval(window.cdTimer);
+      window.cdTimer = setInterval(() => {
+        const now = new Date().getTime();
+        const diff = end - now;
+
+        if (diff <= 0) {
+          countdown.innerText = "✅ Match Started!";
+          clearInterval(window.cdTimer);
+        } else {
+          const h = Math.floor(diff / (1000 * 60 * 60));
+          const m = Math.floor((diff % (1000 * 60 * 60)) / (1000 * 60));
+          const s = Math.floor((diff % (1000 * 60)) / 1000);
+          countdown.innerText = `⏳ Starts In: ${h}h ${m}m ${s}s`;
+        }
+      }, 1000);
     }
 
-    // Fake Real-time viewers
-    function updateViewers() {
-      document.getElementById("viewers").innerText = Math.floor(Math.random() * 900) + 500;
-    }
-    setInterval(updateViewers, 3000);
+    document.addEventListener("DOMContentLoaded", loadMatches);
   </script>
-
 </body>
 </html>
