--- a/index.html
+++ b/index.html
@@ -1,278 +1,238 @@
 <!DOCTYPE html>
 <html lang="bn">
 <head>
-  <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>BDStreamHub</title>
   <style>
-    /* Reset + Globals */
-    * { box-sizing: border-box; margin:0; padding:0; }
-    body { background:#111; color:#eee; font-family:sans-serif; }
-    a { text-decoration:none; color:inherit; }
+    * { box-sizing: border-box; margin: 0; padding: 0; }
+    body { background: #111; color: #eee; font-family: sans-serif; }
+    a { text-decoration: none; color: inherit; }
 
-    /* Header */
     header {
-      background:#222; display:flex; align-items:center;
-      justify-content:space-between; padding:10px 15px;
+      background: #222; display: flex; align-items: center;
+      justify-content: space-between; padding: 10px 15px;
     }
-    .brand { font-size:1.4rem; font-weight:bold; }
+    .brand { font-size: 1.4rem; font-weight: bold; }
     .search-circle {
-      width:40px; height:40px; border:2px solid #08f;
-      border-radius:50%; display:flex; align-items:center; justify-content:center;
-      position:relative;
+      width: 40px; height: 40px; border: 2px solid #08f;
+      border-radius: 50%; display: flex; align-items: center; justify-content: center;
+      position: relative;
     }
     .search-circle input {
-      width:100%; height:100%;
-      background:transparent; border:none; color:#fff;
-      text-align:center; font-size:1.2rem;
+      width: 100%; height: 100%;
+      background: transparent; border: none; color: #fff;
+      text-align: center; font-size: 1.2rem;
     }
-    .menu-dot { font-size:1.8rem; cursor:pointer; position:relative; }
+    .menu-dot { font-size: 1.8rem; cursor: pointer; position: relative; }
     .menu-content {
-      display:none; position:absolute; top:45px; right:0;
-      background:#333; border-radius:6px; overflow:hidden;
+      display: none; position: absolute; top: 45px; right: 0;
+      background: #333; border-radius: 6px; overflow: hidden;
     }
     .menu-content a {
-      display:block; padding:8px 12px; color:#08f;
-      white-space:nowrap;
+      display: block; padding: 8px 12px; color: #08f;
     }
 
-    /* Notice Bar */
     .notice-bar {
-      background:#ffeb3b; color:#111; overflow:hidden;
-      white-space:nowrap; padding:8px 0;
+      background: #ffeb3b; color: #111; overflow: hidden;
+      white-space: nowrap; padding: 8px 0;
     }
     .notice-text {
-      display:inline-block; padding-left:100%;
-      animation:scroll-left 12s linear infinite;
+      display: inline-block; padding-left: 100%;
+      animation: scroll-left 12s linear infinite;
     }
     @keyframes scroll-left {
       0% { transform: translateX(0); }
       100% { transform: translateX(-100%); }
     }
 
-    /* Tabs */
     .tabs {
-      display:flex; justify-content:center; gap:10px; padding:10px 0;
+      display: flex; justify-content: center; gap: 10px; padding: 10px 0;
     }
     .tabs button {
-      background:#222; color:#eee; border:none; padding:8px 16px;
-      border-radius:20px; cursor:pointer; transition:.3s;
+      background: #222; color: #eee; border: none; padding: 8px 16px;
+      border-radius: 20px; cursor: pointer; transition: .3s;
     }
-    .tabs button.active { background:#08f; }
+    .tabs button.active { background: #08f; }
 
-    /* Match Cards */
     #match-list {
-      padding:0 15px 30px; display:grid; gap:15px;
-      grid-template-columns:1fr; 
+      padding: 0 15px 30px; display: grid; gap: 15px;
+      grid-template-columns: 1fr;
     }
     @media(min-width:800px) {
-      #match-list { grid-template-columns:1fr 1fr; }
+      #match-list { grid-template-columns: 1fr 1fr; }
     }
     .match-card {
-      background:#222; border-radius:12px; padding:15px;
-      position:relative; overflow:hidden;
+      background: #222; border-radius: 12px; padding: 15px;
+      position: relative; overflow: hidden;
     }
     .badge {
-      position:absolute; top:12px; left:12px;
-      padding:4px 10px; border-radius:4px;
-      font-size:.85rem; font-weight:bold;
+      position: absolute; top: 12px; left: 12px;
+      padding: 4px 10px; border-radius: 4px;
+      font-size: .85rem; font-weight: bold;
     }
-    .live-badge { background:red; color:#fff; animation:blink 1s infinite; }
-    .coming-badge { background:orange; color:#000; }
+    .live-badge { background: red; color: #fff; animation: blink 1s infinite; }
+    .coming-badge { background: orange; color: #000; }
     @keyframes blink { 50% { opacity: .3; } }
 
     .teams {
-      display:flex; align-items:center; justify-content:center;
-      gap:10px; font-size:1.1rem; font-weight:bold; margin-bottom:12px;
+      display: flex; align-items: center; justify-content: center;
+      gap: 10px; font-size: 1.1rem; font-weight: bold; margin-bottom: 12px;
     }
     .teams img {
-      width:40px; height:40px; border-radius:50%;
-      object-fit:cover; border:2px solid #08f;
+      width: 40px; height: 40px; border-radius: 50%;
+      object-fit: cover; border: 2px solid #08f;
     }
 
     .time-info, .countdown {
-      text-align:center; color:#ccc; margin-bottom:10px;
+      text-align: center; color: #ccc; margin-bottom: 10px;
     }
     .server-btns {
-      text-align:center; margin-top:8px;
+      text-align: center; margin-top: 8px;
     }
     .server-btns a {
-      display:inline-block; margin:0 5px; padding:6px 12px;
-      background:#08f; color:#111; border-radius:6px;
-      font-size:.9rem; font-weight:600;
+      display: inline-block; margin: 0 5px; padding: 6px 12px;
+      background: #08f; color: #111; border-radius: 6px;
+      font-size: .9rem; font-weight: 600;
     }
 
-    /* Telegram Popup */
     .overlay {
-      display:none; position:fixed; inset:0;
-      background:rgba(0,0,0,.7); justify-content:center; align-items:center;
-      z-index:999;
+      display: none; position: fixed; inset: 0;
+      background: rgba(0, 0, 0, .7); justify-content: center; align-items: center;
+      z-index: 999;
     }
     .popup {
-      background:#222; padding:20px; border-radius:8px;
-      text-align:center; color:#eee;
+      background: #222; padding: 20px; border-radius: 8px;
+      text-align: center; color: #eee;
     }
     .popup button {
-      margin-top:12px; padding:8px 14px; background:#08f;
-      border:none; border-radius:6px; font-weight:bold; cursor:pointer;
+      margin-top: 12px; padding: 8px 14px; background: #08f;
+      border: none; border-radius: 6px; font-weight: bold; cursor: pointer;
     }
   </style>
 </head>
 <body>
 
-  <!-- HEADER -->
-  <header>
-    <div class="brand">BDStreamHub</div>
-    <div class="search-circle"><input id="search" placeholder="🔍"></div>
-    <div class="menu-dot" onclick="toggleMenu()">⋮
-      <div class="menu-content" id="menuContent">
-        <a href="https://t.me/BDStreamHub_Discussion0" target="_blank">Join Telegram</a>
-      </div>
-    </div>
-  </header>
-
-  <!-- NOTICE BAR -->
-  <div class="notice-bar"><div class="notice-text" id="noticeText"></div></div>
-
-  <!-- TABS -->
-  <div class="tabs">
-    <button id="liveBtn" class="active" onclick="showTab('live')">Live</button>
-    <button id="upcomingBtn" onclick="showTab('upcoming')">Upcoming</button>
-  </div>
-
-  <!-- MATCH LIST -->
-  <div id="match-list"></div>
-
-  <!-- TELEGRAM POPUP -->
-  <div class="overlay" id="telegramOverlay">
-    <div class="popup">
-      <p>👉 আমাদের Telegram গ্রুপে জয়েন করুন!</p>
-      <button onclick="joinTelegram()">Join Now</button>
+<header>
+  <div class="brand">BDStreamHub</div>
+  <div class="search-circle"><input id="search" placeholder="🔍" oninput="renderMatches()"></div>
+  <div class="menu-dot" onclick="toggleMenu()">⋮
+    <div class="menu-content" id="menuContent">
+      <a href="https://t.me/BDStreamHub_Discussion0" target="_blank">Join Telegram</a>
     </div>
   </div>
+</header>
 
-  <script>
-    const apiURL = "https://script.google.com/macros/s/AKfycbwxRYG33l5iXVvbGysPFixZThWftJ566wI5ko0cV5r7yOPSXr1D7Z_4qkLrYg-9U--4rg/exec?action=get";
-    let matches = [], noticeMsg = "", currentTab = 'live';
+<div class="notice-bar"><div class="notice-text" id="noticeText"></div></div>
 
-    // Toggle 3-dot menu
-    function toggleMenu() {
-      const mc = document.getElementById('menuContent');
-      mc.style.display = mc.style.display==='block'?'none':'block';
+<div class="tabs">
+  <button id="liveBtn" class="active" onclick="showTab('live')">Live</button>
+  <button id="upcomingBtn" onclick="showTab('upcoming')">Upcoming</button>
+</div>
+
+<div id="match-list"></div>
+
+<div class="overlay" id="telegramOverlay">
+  <div class="popup">
+    <p>👉 আমাদের Telegram গ্রুপে জয়েন করুন!</p>
+    <button onclick="joinTelegram()">Join Now</button>
+  </div>
+</div>
+
+<script>
+  const apiURL = "https://script.google.com/macros/s/AKfycbwxRYG33l5iXVvbGysPFixZThWftJ566wI5ko0cV5r7yOPSXr1D7Z_4qkLrYg-9U--4rg/exec?action=get"; // Replace with your web app URL
+  let matches = [], currentTab = 'live';
+
+  function toggleMenu() {
+    const mc = document.getElementById('menuContent');
+    mc.style.display = mc.style.display === 'block' ? 'none' : 'block';
+  }
+  document.addEventListener('click', e => {
+    if (!e.target.closest('.menu-dot')) {
+      document.getElementById('menuContent').style.display = 'none';
     }
-    document.addEventListener('click', e => {
-      if (!e.target.closest('.menu-dot')) {
-        document.getElementById('menuContent').style.display='none';
-      }
-    });
+  });
 
-    // Telegram popup
-    if (!localStorage.getItem('joinedTelegram')) {
-      document.getElementById('telegramOverlay').style.display = 'flex';
-    }
-    function joinTelegram() {
-      window.open('https://t.me/BDStreamHub_Discussion0','_blank');
-      localStorage.setItem('joinedTelegram','yes');
-      document.getElementById('telegramOverlay').style.display = 'none';
-    }
+  if (!localStorage.getItem('joinedTelegram')) {
+    document.getElementById('telegramOverlay').style.display = 'flex';
+  }
+  function joinTelegram() {
+    window.open('https://t.me/BDStreamHub_Discussion0', '_blank');
+    localStorage.setItem('joinedTelegram', 'yes');
+    document.getElementById('telegramOverlay').style.display = 'none';
+  }
 
-    // Fetch data
-    async function fetchData(){
+  async function fetchData() {
+    try {
       const res = await fetch(apiURL);
       const json = await res.json();
-      matches = json.matches;
-      noticeMsg = "📢 মোবাইলে দেখা 👉 Network Stream Player | পিসিতে 👉 VLC Media Player";
-      document.getElementById('noticeText').innerText = noticeMsg;
+      matches = json.matches || [];
+      document.getElementById('noticeText').innerText = "📢 মোবাইলে দেখা 👉 Network Stream Player | পিসিতে 👉 VLC Media Player";
       renderMatches();
+    } catch (e) {
+      document.getElementById('noticeText').innerText = "❌ ডেটা লোড হচ্ছে না!";
     }
+  }
 
-    // Show Live or Upcoming
-    function showTab(tab){
-      currentTab = tab;
-      document.getElementById('liveBtn').classList.toggle('active', tab==='live');
-      document.getElementById('upcomingBtn').classList.toggle('active', tab==='upcoming');
-      renderMatches();
-    }
+  function showTab(tab) {
+    currentTab = tab;
+    document.getElementById('liveBtn').classList.toggle('active', tab === 'live');
+    document.getElementById('upcomingBtn').classList.toggle('active', tab === 'upcoming');
+    renderMatches();
+  }
 
-    // Render matches
-    function renderMatches(){
-      const now = new Date();
-      const list = document.getElementById('match-list');
-      list.innerHTML = '';
-      const filter = document.getElementById('search').value.toLowerCase();
+  function renderMatches() {
+    const now = new Date();
+    const list = document.getElementById('match-list');
+    list.innerHTML = '';
+    const filter = document.getElementById('search').value.toLowerCase();
 
-      matches.forEach((m, i) => {
-        const start = new Date(m.matchTime);
-        const diff = now - start;
-        const isLive = diff>=0 && diff < 2*60*60*1000;
-        const until = start - now;
-        const comingSoon = until > 0 && until <= 15*60000;
+    matches.forEach(m => {
+      const start = new Date(m.matchTime);
+      const diff = now - start;
+      const isLive = diff >= 0 && diff < 2 * 60 * 60 * 1000;
+      const until = start - now;
+      const comingSoon = until > 0 && until <= 15 * 60 * 1000;
 
-        if ((currentTab==='live' && !isLive) || (currentTab==='upcoming' && isLive)) return;
-        if (filter && !(m.matchTitle.toLowerCase().includes(filter) || m.team1.toLowerCase().includes(filter) || m.team2.toLowerCase().includes(filter))) return;
+      if ((currentTab === 'live' && !isLive) || (currentTab === 'upcoming' && isLive)) return;
+      if (filter && !(m.matchTitle.toLowerCase().includes(filter) || m.team1.toLowerCase().includes(filter) || m.team2.toLowerCase().includes(filter))) return;
 
-        const card = document.createElement('div');
-        card.className = 'match-card';
+      const card = document.createElement('div');
+      card.className = 'match-card';
 
-        // Badge
-        let badge = '';
-        if (isLive) badge = '<div class="badge live-badge">LIVE</div>';
-        else if (comingSoon) badge = '<div class="badge coming-badge">COMING</div>';
+      let badge = '';
+      if (isLive) badge = '<div class="badge live-badge">LIVE</div>';
+      else if (comingSoon) badge = '<div class="badge coming-badge">COMING</div>';
 
-        // Teams
-        const teams = `<div class="teams">
-          <img src="${m.team1Logo}">${m.team1} vs ${m.team2}<img src="${m.team2Logo}">
-        </div>`;
+      const teams = `<div class="teams">
+        <img src="${m.team1Logo}">${m.team1} vs ${m.team2}<img src="${m.team2Logo}">
+      </div>`;
 
-        // Time/Countdown
-        let timeInfo = '';
-        if (isLive) {
-          timeInfo = `<div class="time-info">${Math.floor(diff/60000)}m ${Math.floor((diff%60000)/1000)}s ago</div>`;
-        } else {
-          const d = Math.floor(until/86400000),
-                h = Math.floor((until%86400000)/3600000),
-                mm = Math.floor((until%3600000)/60000),
-                s = Math.floor((until%60000)/1000);
-          timeInfo = `
-            <div class="time-info">${start.toLocaleString('en-GB',{timeZone:'Asia/Dhaka'})}</div>
-            <div class="countdown">${d}d ${h}h ${mm}m ${s}s left</div>
-          `;
-        }
-
-        // Servers
-        const servers = ['server1','server2','server3'].map((key,idx) => 
-          m[key] ? `<a href="${m[key]}" onclick="openLink(event,'${m[key]}')" target="_blank">Server ${idx+1}</a>` : ''
-        ).join('');
-
-        card.innerHTML = badge + teams + timeInfo +
-          `<div class="server-btns">${servers}</div>`;
-
-        list.appendChild(card);
-
-        // update countdown every second
-        if (!isLive) {
-          setInterval(() => {
-            const elems = document.getElementsByClassName('countdown');
-            if (elems[i]) elems[i].innerText = `${Math.floor((start - new Date())/86400000)}d ${Math.floor(((start-new Date())%86400000)/3600000)}h ${Math.floor(((start-new Date())%3600000)/60000)}m ${Math.floor(((start-new Date())%60000)/1000)}s left`;
-          }, 1000);
-        }
-      });
-    }
-
-    // Device-specific link opener
-    function openLink(e, url) {
-      e.preventDefault();
-      const ua = navigator.userAgent;
-      if (/Mobi|Android/i.test(ua)) {
-        window.location.href = url; // network streams handled by player
+      let timeInfo = '';
+      if (isLive) {
+        timeInfo = `<div class="time-info">${Math.floor(diff / 60000)}m ${Math.floor((diff % 60000) / 1000)}s ago</div>`;
       } else {
-        window.location.href = 'vlc://' + url;
+        const d = Math.floor(until / 86400000),
+              h = Math.floor((until % 86400000) / 3600000),
+              mm = Math.floor((until % 3600000) / 60000),
+              s = Math.floor((until % 60000) / 1000);
+        timeInfo = `
+          <div class="time-info">${start.toLocaleString('en-GB', { timeZone: 'Asia/Dhaka' })}</div>
+          <div class="countdown">${d}d ${h}h ${mm}m ${s}s left</div>
+        `;
       }
-    }
 
-    document.getElementById('search').addEventListener('input', renderMatches);
-    fetchData();
-    setInterval(fetchData, 60000);
-  </script>
+      const servers = ['server1','server2','server3'].filter(k => m[k]).map((k, i) =>
+        `<a href="${m[k]}" target="_blank">Server ${i + 1}</a>`).join('');
+
+      card.innerHTML = badge + teams + timeInfo + `<div class="server-btns">${servers}</div>`;
+      list.appendChild(card);
+    });
+  }
+
+  fetchData();
+  setInterval(fetchData, 60000); // Refresh every 60 sec
+</script>
+
 </body>
 </html>
